--- a/style.css
+++ b/style.css
@@ -375,7 +375,7 @@ address a:hover {
 }
 
 article{
-  color: #f7c325;
+  color: #ffffff;
   background-color: #553B06;
   margin: 10px;
   padding: 1rem;
